[FIX] web: date options are not displayed in dropdown
before this commit: when groupby dropdown is opened and hover over date/datetime
field then it does not show options like Day, Month, Quarter, Year instead it
adds horizontal scrollbar, this issue is raised after commit: https://github.com/odoo/odoo/commit/cf351ae49875ec7d28a18747b65ed2a61f55262b
So this commit simply reverts that commit and fix the issue solved by above commit
different way.

with this commit: reverts https://github.com/odoo/odoo/commit/cf351ae49875ec7d28a18747b65ed2a61f55262b
and fix the issue solved in above commit different way.

task-2452033

closes odoo/odoo#65689

Related: odoo/enterprise#16180

--- a/addons/web/static/src/scss/dropdown_menu.scss
+++ b/addons/web/static/src/scss/dropdown_menu.scss
@@ -4,6 +4,8 @@
     }
 
     min-width: 150px;
+    max-height: calc(100vh - 140px); // FIXME
+    overflow: auto;
 
     .o_menu_item {
         position: relative;
@@ -16,11 +18,6 @@
             }
         }
     }
-}
-
-.o_dropdown_menu, .dropdown-menu {
-    max-height: calc(100vh - 140px); // FIXME
-    overflow: auto;
 }
 
 .dropdown-item {
